--- a/Debug/makefile
+++ b/Debug/makefile
@@ -37,34 +37,34 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := 767_SPI_ILI9341_2
+BUILD_ARTIFACT_NAME := PBL1_Monitor
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-767_SPI_ILI9341_2.elf \
+PBL1_Monitor.elf \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-767_SPI_ILI9341_2.list \
+PBL1_Monitor.list \
 
 OBJCOPY_BIN += \
-767_SPI_ILI9341_2.bin \
+PBL1_Monitor.bin \
 
 
 # All Target
 all: main-build
 
 # Main-build Target
-main-build: 767_SPI_ILI9341_2.elf secondary-outputs
+main-build: PBL1_Monitor.elf secondary-outputs
 
 # Tool invocations
-767_SPI_ILI9341_2.elf: $(OBJS) $(USER_OBJS) C:\Users\ASUS\STM32CubeIDE\MAD_Lab_1.7.0\767_SPI_ILI9341_2\STM32F767ZITX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "767_SPI_ILI9341_2.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m7 -T"C:\Users\ASUS\STM32CubeIDE\MAD_Lab_1.7.0\767_SPI_ILI9341_2\STM32F767ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="767_SPI_ILI9341_2.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
+PBL1_Monitor.elf: $(OBJS) $(USER_OBJS) C:\Users\ASUS\STM32CubeIDE\MAD_Lab_1.7.0\PBL1_Monitor\STM32F767ZITX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "PBL1_Monitor.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m7 -T"C:\Users\ASUS\STM32CubeIDE\MAD_Lab_1.7.0\PBL1_Monitor\STM32F767ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="PBL1_Monitor.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -73,19 +73,19 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-767_SPI_ILI9341_2.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "767_SPI_ILI9341_2.list"
+PBL1_Monitor.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "PBL1_Monitor.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-767_SPI_ILI9341_2.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "767_SPI_ILI9341_2.bin"
+PBL1_Monitor.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "PBL1_Monitor.bin"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(SIZE_OUTPUT)$(OBJDUMP_LIST)$(EXECUTABLES)$(OBJS)$(S_DEPS)$(S_UPPER_DEPS)$(C_DEPS)$(OBJCOPY_BIN) 767_SPI_ILI9341_2.elf
+	-$(RM) $(SIZE_OUTPUT)$(OBJDUMP_LIST)$(EXECUTABLES)$(OBJS)$(S_DEPS)$(S_UPPER_DEPS)$(C_DEPS)$(OBJCOPY_BIN) PBL1_Monitor.elf
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_BIN)
